--- a/app/src/main/res/layout/weblayout.xml
+++ b/app/src/main/res/layout/weblayout.xml
@@ -3,10 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageButton
-
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/movieButton"
-      android:onClick="showMovieDetail" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/webname" />
 </LinearLayout>
